# motivo

./: .gitignore  README.md
.github/workflows/: client.yml  compiler.yml  paper.yml  server.yml
code/: .gitignore  Makefile  README.md  docker-compose.yml
code/client/: .gitignore  .prettierignore  Dockerfile  README.md  eslint.config.mjs  (+4 more)
code/compiler/: .clang-format  CMakeLists.txt  Makefile  README.md
code/compiler/apps/: CMakeLists.txt  motivoc.cpp
code/compiler/cmake/: MotivoTargets.cmake
code/compiler/docs/: grammar.bnf  lexical.bnf
code/compiler/examples/: example.motivo  pirates.motivo
code/compiler/include/motivo/: compiler.hpp
code/compiler/include/motivo/diagnostics/: diagnostic.hpp
code/compiler/src/: CMakeLists.txt
code/compiler/src/motivo/: benchmark_timing.hpp  compiler.cpp
code/compiler/src/motivo/common/: CMakeLists.txt
code/compiler/src/motivo/common/ast/: declarations.hpp  definitions.hpp  expressions.hpp  operators.hpp  program.hpp  statements.hpp
code/compiler/src/motivo/common/diagnostics/: CMakeLists.txt  diagnostics_engine.cpp  diagnostics_engine.hpp
code/compiler/src/motivo/common/ir/: note_event.hpp  program.hpp  track.hpp  values.hpp
code/compiler/src/motivo/common/music/: CMakeLists.txt  accidental.cpp  accidental.hpp  drum_note.hpp  instrument.hpp  note.cpp  note.hpp  pitch.cpp  pitch.hpp
code/compiler/src/motivo/common/operators/: operators.hpp
code/compiler/src/motivo/common/source/: CMakeLists.txt  location.cpp  location.hpp  position.cpp  position.hpp
code/compiler/src/motivo/common/types/: CMakeLists.txt  type.hpp  type_kind.hpp  type_rules.cpp  type_rules.hpp
code/compiler/src/motivo/common/utils/: overloaded.hpp
code/compiler/src/motivo/lowering/: CMakeLists.txt  lower.cpp  lower.hpp  lower_result.cpp  lower_result.hpp
code/compiler/src/motivo/lowering/detail/: CMakeLists.txt  ast_lowerer.hpp  expression_evaluator.cpp  expression_evaluator.hpp  lowerer_context.cpp  lowerer_context.hpp  value_flattener.cpp  value_flattener.hpp
code/compiler/src/motivo/lowering/detail/ast_lowerers/: CMakeLists.txt  lower_control_flow_statements.cpp  lower_declarative_statements.cpp  lower_definitions.cpp  lower_play_statement.cpp  lower_statement.cpp
code/compiler/src/motivo/lowering/detail/expression_evaluators/: CMakeLists.txt  evaluate_binary_expression.cpp  evaluate_identifier_expression.cpp  evaluate_literal_expressions.cpp  evaluate_musical_expressions.cpp  evaluate_pattern_call_expression.cpp  evaluate_ternary_expression.cpp  evaluate_unary_expression.cpp
code/compiler/src/motivo/midi/: CMakeLists.txt  write_midi.cpp  write_midi.hpp
code/compiler/src/motivo/parsing/: CMakeLists.txt  parse.cpp  parse.hpp  parse_result.cpp  parse_result.hpp
code/compiler/src/motivo/parsing/detail/: parser.y  scanner.l  scanner_helpers.cpp  scanner_helpers.hpp
code/compiler/src/motivo/semantic/: CMakeLists.txt  analysis_result.cpp  analysis_result.hpp  analyze.cpp  analyze.hpp  symbol.hpp  type.hpp
code/compiler/src/motivo/semantic/detail/: CMakeLists.txt  annotations.cpp  annotations.hpp  expression_annotation.hpp  symbol_table.cpp  symbol_table.hpp  traversal.cpp  traversal.hpp
code/compiler/src/motivo/semantic/detail/scopes/: CMakeLists.txt  scope_stack.cpp  scope_stack.hpp
code/compiler/src/motivo/semantic/detail/traversal/: CMakeLists.txt  collectors.cpp  validators.cpp
code/compiler/src/motivo/semantic/detail/traversal/visitors/: CMakeLists.txt  visit_definitions.cpp  visit_expressions.cpp  visit_statements.cpp
code/compiler/src/motivo/semantic/detail/types/: CMakeLists.txt  type_rules.cpp  type_rules.hpp
code/compiler/tests/: CMakeLists.txt
code/compiler/tests/golden/: CMakeLists.txt  golden_test.cpp
code/compiler/tests/golden/fixtures/: happy_path.motivo  lowering_errors.motivo  parse_errors.motivo  semantic_errors.motivo
code/compiler/tests/integration/: CMakeLists.txt  compiler_api_test.cpp
code/compiler/tests/unit/common/music/: note_test.cpp
code/compiler/tests/unit/common/types/: type_rules_test.cpp
code/compiler/tests/unit/lowering/control_flow/: for_test.cpp  if_test.cpp  loop_test.cpp
code/compiler/tests/unit/lowering/cursor/: chord_cursor_test.cpp  from_offset_test.cpp  note_cursor_test.cpp  rest_cursor_test.cpp  sequence_cursor_test.cpp
code/compiler/tests/unit/lowering/diagnostics/: api_test.cpp  runtime_errors_test.cpp
code/compiler/tests/unit/lowering/expressions/: binary_test.cpp  identifier_test.cpp  literal_test.cpp  musical_test.cpp  ternary_test.cpp  unary_test.cpp
code/compiler/tests/unit/lowering/flattening/: value_flattener_test.cpp
code/compiler/tests/unit/lowering/patterns/: pattern_call_test.cpp
code/compiler/tests/unit/lowering/support/: lowerer_test_support.hpp
code/compiler/tests/unit/lowering/variables/: let_test.cpp  var_decl_test.cpp
code/compiler/tests/unit/lowering/voices/: voice_parallel_test.cpp
code/compiler/tests/unit/midi/: midi_writer_test.cpp
code/compiler/tests/unit/parsing/: parser_test.cpp  scanner_test.cpp  typed_syntax_test.cpp
code/compiler/tests/unit/semantic/: metadata_test.cpp  scope_access_test.cpp
code/compiler/tests/unit/semantic/declarations/: assignment_type_check_test.cpp  bool_strictness_test.cpp  let_test.cpp  pattern_edge_cases_test.cpp  pattern_test.cpp  track_test.cpp  typed_pattern_overload_test.cpp  typing_edge_cases_test.cpp  var_decl_strictness_test.cpp  var_decl_test.cpp
code/compiler/tests/unit/semantic/scoping/: pattern_scoping_test.cpp  shadowing_test.cpp  variable_scoping_test.cpp
code/compiler/tests/unit/semantic/statements/: control_flow_test.cpp  for_step_type_check_test.cpp  play_statement_test.cpp  play_typed_variable_test.cpp
code/compiler/tests/unit/semantic/support/: semantic_test_utils.hpp
code/compiler/tests/unit/semantic/type_checking/: arithmetic_test.cpp  chord_test.cpp  comparison_test.cpp  logical_test.cpp  sequence_test.cpp  ternary_test.cpp  unary_test.cpp
experiments/: .gitignore  Makefile  README.md
paper/: .gitignore  Makefile  README.md  paper.tex  references.bib
(+386 files in other folders)
